--- a/ID.HTML
+++ b/ID.HTML
@@ -16,11 +16,11 @@
 			</div>
 			<h2>ISMAIL HUSEIN AHMED</h2>
 			<h3>Student</h3>
-      <h3>ID0038782</h3>
+      <h3>ID 38782</h3>
 			<hr>
-			<p><strong> University of somalia</strong>
-			<p><strong> District deyniile , gubta</strong> </p>
-			<p><strong>Ph: 252612480837, 252612131651</strong></p>
+			<p> University of somalia</p>
+			<p> District deyniile , gubta </p>
+			<p>Ph: 252612480837, 252612131651</p>
 
 		</div>
 	</div>
@@ -46,8 +46,9 @@
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     width: 600px;
-    height: 600px;
-  
+    height: 500px;
+    margin-top: -200px
+  }
     .id-card-holder {
 			width: 225px;
 		    padding: 4px;
@@ -94,7 +95,7 @@
 		}
 .photo img {
 			width: 80px;
-    		margin-top: 15px;
+    		margin-top: 10px;
 		}
 h2 {
 			font-size: 15px;
@@ -107,7 +108,7 @@ h3 {
 		
 		}
 p {
-			font-size: 5px;
+			font-size: 10px;
 			margin: 2px;
 		}
 .id-card-hook {
